--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "users:seed": "node src/db/seeds/users.js"
+    "users:seed": "node src/db/seeds/users.js",
+    "posts:seed": "node src/db/seeds/posts.js"
   },
   "keywords": [],
   "author": "",
